# QDevTool

./: CMakeLists.txt  QDevTool_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  qss.qrc
QCodeExport/: qcodeexport.cpp  qcodeexport.h  qcodeexport.ui
config/: QCodeExport.ini
res/: qss.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/QCodeExport/: qcodeexport.cpp  qcodeexport.h  qcodeexport.ui
src/QImageTool/: qimagetool.cpp  qimagetool.h  qimagetool.ui
translations/: QDevTool_zh_CN.ts
